# BankSystem

./: CMakeLists.txt
include/: Account.h  Bank.h  Client.h  CreditAccount.h  DebitAccount.h  DepositAccount.h  Employee.h  Person.h  Transaction.h
src/: Account.cpp  Bank.cpp  Client.cpp  CreditAccount.cpp  DebitAccount.cpp  DepositAccount.cpp  Employee.cpp  Person.cpp  Transaction.cpp  main.cpp
tests/: CMakeLists.txt  test_Account.cpp  test_Bank.cpp  test_Client.cpp  test_CreditAccount.cpp  test_DebitAccount.cpp  test_DepositAccount.cpp  test_Employee.cpp  test_Person.cpp  test_Transaction.cpp
